# GraphicsApp

./: .gitignore  CMakeLists.txt  Makefile  README.md  lookdraw  main.c  main.cpp  message.cpp
src/: Object.cpp  Object.h  OpticalObject.cpp  OpticalObject.h  Scene.cpp  Scene.h  app.cpp  app.h  gl_renderer.cpp  gl_renderer.h  graphics.cpp  graphics.h  input.cpp  input.h  main.cpp  message.cpp  message.h  shader.h  util.cpp  util.h
src/shaders/: basic.fs
